# Copyright (c) 2024, BroCode and contributors
# For license information, please see license.txt

# import frappe
from frappe.model.document import Document


class Airport(Document):
	pass
